@@ -2,8 +2,17 @@
 p4a.plonecalendar Changes
 =========================
 
+p4a.calendar (development)
+==========================
+
+Bugfixes
+--------
+
+* Fixed issue #24 where folders created by uploading ICS files via
+  webdav were not becoming calendar enhanced (Rocky Burt)
+
 p4a.plonecalendar 1.0rc1 (2007-07-31)
-================================
+=====================================
 
 Bugfixes
 --------
